--- a/RayCaster/RayCaster.vcxproj
+++ b/RayCaster/RayCaster.vcxproj
@@ -118,7 +118,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FiniteRay.cpp" />
+    <ClCompile Include="InfiniteRay.cpp" />
+    <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Intersection.cpp" />
+    <ClCompile Include="Ray.cpp" />
+    <ClCompile Include="RaySystem.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FiniteRay.h" />
+    <ClInclude Include="InfiniteRay.h" />
+    <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Intersection.h" />
+    <ClInclude Include="Ray.h" />
+    <ClInclude Include="RaySystem.h" />
+    <ClInclude Include="RayType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
